@@ -387,6 +387,7 @@ Cacti CHANGELOG
 -issue#4284: Whilst upgrading, errors in upgrade scripts prevent properly execution
 -issue#4293: Tree search does not take hosts belonging to a site into account
 -issue#4294: Tables outside of pre-built list that need fixing, cause bad unknown column errors
+<<<<<<< HEAD
 -issue#4295: If a page contains multiple tables, a larger table can cause small ones to lose columns
 -issue#4297: Unable to search using regular expressions when trying to filter graphs
 -issue#4312: When using CMD.PHP as the poller, warnings can appear if you only use a subset of data input types
@@ -404,6 +405,7 @@ Cacti CHANGELOG
 -feature#4283: Content Security Policy may block Plugin functionality
 -feature#4317: Allow the Cacti administrator to perform bulk gap filling and floating in parallel
 -feature#4322: Update pace.js to version 1.2.4
+-feature#4306: Allow indexing of all query id in cli reorder_data_query.php
 
 1.2.17
 -security#4019: Incorrect handling of fields led to potential XSS issues
